--- a/v16-asm.cabal
+++ b/v16-asm.cabal
@@ -16,7 +16,7 @@ extra-source-files:  ChangeLog.md
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Ast, Error, Parser, Assemble, ReadMaybe, PreParse
+  exposed-modules:     Error, Lexer, Parser, Assemble
   hs-source-dirs:      src
   build-depends:       base >=4.9 && <4.10
                      , parsec
@@ -35,13 +35,13 @@ executable v16-asm
   ghc-options:         -dynamic -Wall
   default-language:    Haskell2010
 
-test-suite test
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
-  main-is:             Spec.hs
-  build-depends:       base >=4.9 && <4.10
-                     , hspec
-                     , QuickCheck
-                     , v16-asm
-  ghc-options:         -dynamic -Wall
-  default-language:    Haskell2010
+--test-suite test
+--  type:                exitcode-stdio-1.0
+--  hs-source-dirs:      test
+--  main-is:             Spec.hs
+--  build-depends:       base >=4.9 && <4.10
+--                     , hspec
+--                     , QuickCheck
+--                     , v16-asm
+--  ghc-options:         -dynamic -Wall
+--  default-language:    Haskell2010
